# dtfp-devtools

./: AGENTS.md  README.md  dev.sh  dev_mosquitto.conf  interface_spec.json  pyproject.toml  spec_loader.py
dashboard/: dashboard.py
docs/: VERIFICATION.md  WORKFLOW.md
monitor/: monitor.py
tests/: test_schema.py
tests/scenarios/: breakdown.json  fire_overload.json  normal.json
